Fixed horizontal scroll-bar issue.

--- a/src/static/css/editor_ejs.css
+++ b/src/static/css/editor_ejs.css
@@ -189,7 +189,7 @@ body.nosidebar #padeditor { margin-left: 0; }
 }
 #codecompletion option { }
 
-#ac-widget {position:absolute; width:240px; height:159px; overflow:auto; background-color:white;
+#ac-widget {position:absolute; width:240px; height:159px; overflow-y:auto; overflow-x:scroll; background-color:white;
     visibility:hidden; border-style:solid; border-color:gray; border-width:1px;  box-shadow: 5px 5px 5px #888;
     -o-box-shadow: 5px 5px 5px #888; -icab-box-shadow: 5px 5px 5px #888; -khtml-box-shadow: 5px 5px 5px #888;
     -moz-box-shadow: 3px 3px 6px #888; -webkit-box-shadow: 5px 5px 5px #888;}
